Fix the ui on phones and add some context
add 2 images Cat.png, Code.jpg

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
+<head>
     <link rel="stylesheet" href="./css/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,22 +12,25 @@
     <div class="header">
         <div class="hero page-center">
             <div class="header-logo">Header Logo</div>
-            <div class="header-link-one">header link one</div>
-            <div class="header-link-two">header link two</div>
-            <div class="header-link-three">header link three</div>
+            <div class="header-links">
+                <div class="header-link-one">Home</div>
+                <div class="header-link-two">About me</div>
+                <div class="header-link-three">Contact me</div>
+            </div>
         </div>
 
         <div class="main-body page-center">
             <div class="hero-text">
-                <span class="hero-main-text">This website is awesome</span><br></br>
+                <span class="hero-main-text">This is my first website</span><br><br>
 
-                <span class="hero-secondary-text">This website has some subtext that goes here under the main title.
-                    It's a smaller font and the color is lower contrast.</span><br></br>
-
-                <div class="sign-up-button">Sign up</div>
+                <span class="hero-secondary-text">This website is my current best approach in html & css and i am
+                    currently learning from a course: <a href="https://theodinproject.com">The Odin
+                        Project</a></span><br><br>
             </div>
 
-            <div class="main-body-image">this is a placeholder for an image</div>
+            <div class="main-body-image">
+                <img src="./images/Cat.png" class="main-body-image"></img>
+            </div>
         </div>
     </div>
 
@@ -36,53 +39,53 @@
 
         <div class="info-cards">
             <div class="info-card-1">
+                <img src="./images/Code.jpg" class="info-card-img-1">
 
+                <div class="info-card-subtitle-1">
+                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                </div>
             </div>
+
             <div class="info-card-2">
+                <img src="./images/Code.jpg" class="info-card-img-2">
 
+                <div class="info-card-subtitle-2">
+                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                </div>
             </div>
+
             <div class="info-card-3">
+                <img src="./images/Code.jpg" class="info-card-img-3">
 
-            </div>
-            <div class="info-card-4">
-
+                <div class="info-card-subtitle-1">
+                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                </div>
             </div>
         </div>
 
-        <div class="info-cards-subtitle">
-            <div class="info-card-subtitle-1">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="info-card-subtitle-2">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="info-card-subtitle-3">
-                this is some subtext under an illustration or image
-            </div>
-            <div class="info-card-subtitle-4">
-                this is some subtext under an illustration or image
-            </div>
-        </div>
     </div>
-    
+
     <div class="quote-body">
         <div class="quote-container page-center">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote">Do it. Just do it!</div>
 
-            <div class="quote-author">-Thor, God of Thunder</div>
+            <div class="quote-author">-Shia LaBeouf</div>
         </div>
     </div>
 
     <div class="third-body">
-        <div class="call-to-action-card-container">
-            <div class="call-to-action-card">
-                <div class="call-to-action-card-text">
-                    <div class="call-to-action-card-text-1">Call to action! It's time!</div>
-                    <div class="call-to-action-card-text-2">Sign up for our product by clicking that button right over there!</div>
+        <div class="reach-out-card-container">
+            <div class="reach-out-card">
+                <div class="reach-out-card-text">
+                    <div class="reach-out-card-text-1">Wanna reach out to me!</div>
+                    <div class="reach-out-card-text-2">Reach out to me simply by clicking that button right over
+                        there!</div>
                 </div>
-                <div class="call-to-action-card-sign-up-button">
-                    <div>Sign up</div>
-                </div>
+                <a href="https://discord.gg/hbvERBJj9X" class="reach-out-card-discord-button">
+                    <div>
+                        Join my Discord
+                    </div>
+                </a>
             </div>
         </div>
     </div>
