Modify index.html and index.css "work in progress"

--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
         <div class="hero page-center">
             <div class="header-logo">Header Logo</div>
             <div class="header-links">
-                <div class="header-link-one">Home</div>
-                <div class="header-link-two">About me</div>
+                
+                    <div class="header-link-one">
+                        <a href="#header">
+                            Home
+                        </a>
+                    </div>
+
+                <div class="header-link-two">
+                    <a href="#features">
+                        About me
+                    </a>
+                </div>
+
                 <div class="header-link-three">Contact me</div>
             </div>
         </div>
@@ -35,14 +46,15 @@
     </div>
 
     <div class="secondary-body page-center">
-        <div class="information-header page-center">Some Random information.</div>
+        <div class="information-header page-center"><span id="#information-header">Some Random information.</span></div>
 
         <div class="info-cards">
             <div class="info-card-1">
                 <img src="./images/Code.jpg" class="info-card-img-1">
 
                 <div class="info-card-subtitle-1">
-                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                    I love programming and enjoy doing it. I am willing to not stop this passion and continue on my
+                    journey.
                 </div>
             </div>
 
@@ -50,14 +62,16 @@
                 <img src="./images/Code.jpg" class="info-card-img-2">
 
                 <div class="info-card-subtitle-2">
-                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                    I love programming and enjoy doing it. I am willing to not stop this passion and continue on my
+                    journey.
                 </div>
             </div>
 
             <div class="info-card-3">
                 <img src="./images/Code.jpg" class="info-card-img-3">
-                <div class="info-card-subtitle-1">
-                    I love programming and enjoy it. I am willing not stop this passion and continue in my journey.
+                <div class="info-card-subtitle-3">
+                    I love programming and enjoy doing it. I am willing to not stop this passion and continue on my
+                    journey.
                 </div>
             </div>
         </div>
@@ -65,11 +79,13 @@
     </div>
 
     <div class="quote-body">
-        <div class="quote-container page-center">
-            <div class="quote">Do it. Just do it!</div>
+        <a href="https://youtu.be/ZXsQAXx_ao0">
+            <div class="quote-container page-center">
+                <div class="quote">Do it. Just do it!</div>
 
-            <div class="quote-author">-Shia LaBeouf</div>
-        </div>
+                <div class="quote-author">-Shia LaBeouf</div>
+            </div>
+        </a>
     </div>
 
     <div class="third-body">
@@ -80,9 +96,9 @@
                     <div class="reach-out-card-text-2">Reach out to me simply by clicking that button right over
                         there!</div>
                 </div>
-                <a href="https://discord.gg/hbvERBJj9X" class="reach-out-card-discord-button">
+                <a href="https://discordapp.com/users/484808856128585750" class="reach-out-card-discord-button">
                     <div>
-                        Join my Discord
+                        Add me on Discord
                     </div>
                 </a>
             </div>
