Modify the home page
 Add new image Logo.png

--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
 <body>
     <div class="header">
         <div class="hero page-center">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">
+                <img src="./images/Logo.png" width="70px">
+            </div>
             <div class="header-links">
                 
                     <div class="header-link-one">
-                        <a href="#header">
+                        <a href="#">
                             Home
                         </a>
                     </div>
 
                 <div class="header-link-two">
-                    <a href="#features">
-                        About me
+                    <a href="#secondary-body">
+                        About
                     </a>
                 </div>
 
-                <div class="header-link-three">Contact me</div>
+                <div class="header-link-three">
+                    <a href="#third-body">
+                        Contact
+                    </a></div>
             </div>
         </div>
 
@@ -46,6 +51,7 @@
     </div>
 
     <div class="secondary-body page-center">
+        <a id="secondary-body"></a>
         <div class="information-header page-center"><span id="#information-header">Some Random information.</span></div>
 
         <div class="info-cards">
@@ -89,6 +95,7 @@
     </div>
 
     <div class="third-body">
+        <a id="third-body"></a>
         <div class="reach-out-card-container">
             <div class="reach-out-card">
                 <div class="reach-out-card-text">
