--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <section class="secondary-body page-center">
+    <section class="secondary-body page-center" id="secondary-body">
         <div class="information-header page-center"><span id="#information-header">Some Random information.</span></div>
 
         <div class="info-cards">
@@ -94,7 +94,7 @@
         </a>
     </div>
 
-    <section class="third-body">
+    <section class="third-body" id="third-body">
         <div class="reach-out-card-container">
             <div class="reach-out-card">
                 <div class="reach-out-card-text">
