--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="hero-main-text">This is my first website</span><br><br>
 
                 <span class="hero-secondary-text">This website is my current best approach in html & css and i am
-                    currently learning from a course: <a href="https://theodinproject.com">The Odin
+                    currently learning from a course: <a href="https://theodinproject.com" target="_blank">The Odin
                         Project</a></span><br><br>
             </div>
 
@@ -85,7 +85,7 @@
     </section>
 
     <div class="quote-body">
-        <a href="https://youtu.be/ZXsQAXx_ao0">
+        <a href="https://youtu.be/ZXsQAXx_ao0" target="_blank">
             <div class="quote-container page-center">
                 <div class="quote">Do it. Just do it!</div>
 
@@ -102,7 +102,7 @@
                     <div class="reach-out-card-text-2">Reach out to me simply by clicking that button right over
                         there!</div>
                 </div>
-                <a href="https://discordapp.com/users/484808856128585750" class="reach-out-card-discord-button">
+                <a href="https://discordapp.com/users/484808856128585750" target="_blank" class="reach-out-card-discord-button">
                     <div>
                         Add me on Discord
                     </div>
@@ -114,7 +114,7 @@
     <div class="footer">
         <div class="footer-container page-center">
             <div class="footer-text">
-                Made by - <a href="https://github.com/ZiedDev/">Zied</a>
+                Made by - <a href="https://github.com/ZiedDev/" target="_blank">Zied</a>
             </div>
         </div>
     </div>
