Make the page more beautiful
Rearrange the fonts folder
Add new fonts WorkSans
Add 2 new images Graphic.jpg, Meme.jpg

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <div class="header">
         <div class="hero page-center">
-            <div class="header-logo">
-                <img src="./images/Logo.png" width="70px">
-            </div>
+            <a href="./index.html" class="header-logo">
+                <div>
+                    <img src="./images/Logo.png" width="70px">
+                </div>
+            </a>
+
             <div class="header-links">
 
                 <div class="header-link-one">
@@ -52,9 +55,10 @@
     </div>
 
     <section class="secondary-body page-center" id="secondary-body">
-        <div class="information-header page-center"><span id="#information-header">Some Random information.</span></div>
+        <div class="information-header">Some Random Info.</div>
 
         <div class="info-cards">
+
             <div class="info-card-1">
                 <img src="./images/Code.jpg" class="info-card-img-1">
 
@@ -65,21 +69,21 @@
             </div>
 
             <div class="info-card-2">
-                <img src="./images/Code.jpg" class="info-card-img-2">
+                <img src="./images/Graphic.jpg" class="info-card-img-2">
 
                 <div class="info-card-subtitle-2">
-                    I love programming and enjoy doing it. I am willing to not stop this passion and continue on my
-                    journey.
+                    I admire graphic design and logo-making. Infact all the art on this page is hand-made by me! :)
                 </div>
             </div>
 
             <div class="info-card-3">
-                <img src="./images/Code.jpg" class="info-card-img-3">
+                <img src="./images/Meme.jpg" class="info-card-img-3">
+
                 <div class="info-card-subtitle-3">
-                    I love programming and enjoy doing it. I am willing to not stop this passion and continue on my
-                    journey.
+                    I am also a very funny person and love making memes. :D
                 </div>
             </div>
+
         </div>
 
     </section>
@@ -99,12 +103,13 @@
             <div class="reach-out-card">
                 <div class="reach-out-card-text">
                     <div class="reach-out-card-text-1">Wanna reach out to me!</div>
-                    <div class="reach-out-card-text-2">Reach out to me simply by clicking that button right over
+                    <div class="reach-out-card-text-2">Add me on Discord by simply clicking that button right over
                         there!</div>
                 </div>
-                <a href="https://discordapp.com/users/484808856128585750" target="_blank" class="reach-out-card-discord-button">
+                <a href="https://discordapp.com/users/484808856128585750" target="_blank"
+                    class="reach-out-card-discord-button">
                     <div>
-                        Add me on Discord
+                        My Discord
                     </div>
                 </a>
             </div>
@@ -114,7 +119,7 @@
     <div class="footer">
         <div class="footer-container page-center">
             <div class="footer-text">
-                Made by - <a href="https://github.com/ZiedDev/" target="_blank">Zied</a>
+                Made by - <a href="https://github.com/ZiedDev/" target="_blank">Zied</a> <br> © 2023
             </div>
         </div>
     </div>
