Fix the logo icon hit-box

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
     <div class="header">
         <div class="hero page-center">
-            <a href="./index.html" class="header-logo">
-                <div>
+            <div class="header-logo">
+                <a href="./index.html" class="header-logo-link">
+
                     <img src="./images/Logo.png" width="70px">
-                </div>
-            </a>
+
+                </a>
+            </div>
 
             <div class="header-links">
 
