--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-links">
 
                 <div class="header-link-one">
-                    <a href="#">
+                    <a href="">
                         Home
                     </a>
                 </div>
