--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="hero page-center">
             <div class="header-logo">
-                <a href="./index.html" class="header-logo-link">
+                <a href="" class="header-logo-link">
                     <img src="./images/Logo.png" width="70px">
                 </a>
             </div>
