Make minor quality of life changes
Add shadow for some cards and images
Make links more fun to hover

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
             <div class="header-links">
 
-                <div class="header-link-one">
+                <div class="header-link-one link-enhancer">
                     <a href="">
                         Home
                     </a>
                 </div>
 
-                <div class="header-link-two">
+                <div class="header-link-two link-enhancer">
                     <a href="#secondary-body">
                         About
                     </a>
                 </div>
 
-                <div class="header-link-three">
+                <div class="header-link-three link-enhancer">
                     <a href="#third-body">
                         Contact
                     </a>
@@ -43,7 +43,7 @@
             <div class="hero-text">
                 <span class="hero-main-text">This is my first website</span><br><br>
 
-                <span class="hero-secondary-text">This website is my current best approach in html & css and i am
+                <span class="hero-secondary-text link-enhancer">This website is my current best approach in html & css and i am
                     currently learning from a course: <a href="https://theodinproject.com" target="_blank">The Odin
                         Project</a></span><br><br>
             </div>
@@ -118,7 +118,7 @@
 
     <div class="footer">
         <div class="footer-container page-center">
-            <div class="footer-text">
+            <div class="footer-text link-enhancer">
                 Made by - <a href="https://github.com/ZiedDev/" target="_blank">Zied</a> <br> © 2023
             </div>
         </div>
