Fix some tiny details

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
             <div class="hero-text">
                 <span class="hero-main-text">This is my first website</span><br><br>
 
-                <span class="hero-secondary-text link-enhancer">This website is my current best approach in html & css and i am
+                <span class="hero-secondary-text link-enhancer">This website is my current best approach in html & css
+                    and i am
                     currently learning from a course: <a href="https://theodinproject.com" target="_blank">The Odin
                         Project</a></span><br><br>
             </div>
 
-            <div class="main-body-image">
+            <div class="main-body-image-holder">
                 <img src="./images/Cat.png" class="main-body-image"></img>
             </div>
         </div>
